# binvis

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  render.c
src/include/: render.h
